--- a/Loan Prediction_Classification.ipynb
+++ b/Loan Prediction_Classification.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "8c5b04be",
    "metadata": {},
    "outputs": [
@@ -241,13 +241,23 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head() #shape(400000, 32)"
+    "data.head(5) #shape(400000, 32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "16f0d044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#metadata"
    ]
   },
   {
